-CRUD de usuários    = OK -CRUD de livros      = OK -CRUD de empréstimos = OK -Funcionalidades do Bibliotecário = 100% -Funcionalidades do Balconista    = 100% -Melhoras nos botões de Ativar/Inativar livros; -Melhoras no posicionamento do section; -Adicionado as colunas datacad, dataalt, na tabela de livros; -Adicionado as colunas datacad, dataalt e datanasc na tabela de usuários; -Feito as alterações nas operações CRUD dos usuários/livros e modo a deixar salvos as datas corretamente... -Adicionado tela de consulta de acervo próprio pro balconista. -Refeito a tela de início, melhorei posicionamento da imagem de início, NOVAMENTE. -Melhorias nos Beans; -Realizado ?faces-redirect=true para atualização da url sempre; -Realizado conferência nas mensagens de retornos. -Realizado alterações no front-end quanto a validação dos maxlenght dos campos; -Realizado alteração nos inputs de datas e outputs também; -Melhoria nos posicionamentos dos painéis de controle do balconista e bibliotecário; -Realizado melhoria no CRUD de livros; -Adicionado uma base de dados para testes; -Iniciando CRUD de empréstimos. -Adicionado SelectOneMenu nas novas funcionalidades do Empréstimo(mais clean); -Banco de dados atualizado.

--- a/web/acessoAluno.xhtml
+++ b/web/acessoAluno.xhtml
@@ -65,6 +65,21 @@
                 <div class="form-group">
                     <h5 align="center">Menu do Aluno</h5>
                 </div>
+                <div class="menu">
+                    <div class="form-group">
+                        <h:commandButton value="Consultar Livros" class="btn btn-block btn-primary"
+                                         action="acessoAluno?faces-redirect=true"/>
+                    </div>
+                    <div class="form-group">
+                        <h:commandButton value="Meus Empréstimos" class="btn btn-block btn-primary"
+                                         action="acessoAluno?faces-redirect=true"/>
+                    </div>
+                    <div class="form-group">
+
+                        <h:commandButton value="Dados Cadastrais" class="btn btn-block btn-primary"
+                                         action="acessoAluno?faces-redirect=true"/>
+                    </div>
+                </div>
                 <div class="form-group">
                     <div class="form-group">
                         <p> Perfil: Aluno</p>
