--- a/web/consultaUsuario.xhtml
+++ b/web/consultaUsuario.xhtml
@@ -45,6 +45,10 @@
                 background: gray;
                 color: blue;
             }
+
+            .jumbotron{
+                background: lightgray;
+            }
         </style>
     </meta>
 
