--- a/web/deletarUsuario.xhtml
+++ b/web/deletarUsuario.xhtml
@@ -60,6 +60,10 @@
                 background: gray;
                 color: blue;
             }
+
+            .jumbotron{
+                background: lightgray;
+            }
         </style>
     </meta>
 
