--- a/web/alterarEmprestimo.xhtml
+++ b/web/alterarEmprestimo.xhtml
@@ -4,7 +4,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:p="http://primefaces.org/ui"
->
+      xmlns:f="http://xmlns.jcp.org/jsf/core">
 <h:head>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
@@ -24,7 +24,7 @@
                 right: 0px;
                 margin: auto;
                 width: 650px;
-                height: 150px;
+                height: 160px;
                 padding: 15px;
                 border: solid 1pX black;
                 background: white;
@@ -45,6 +45,25 @@
                 background: gray;
                 color: blue;
             }
+
+            .conf {
+                position: fixed;
+                top: 10px;
+                bottom: 0;
+                left: 0;
+                right: 0;
+                margin: auto;
+                width: 500px;
+                height: 170px;
+                padding: 15px;
+                border: solid 1pX black;
+                background: white;
+                display: none;
+            }
+
+            .jumbotron{
+                background: lightgray;
+            }
         </style>
     </meta>
 
@@ -57,6 +76,16 @@
             document.getElementById('popup').style.display = 'none';
         }
     </script>
+
+    <script type="text/javascript">
+        function abri() {
+            document.getElementById('conf').style.display = 'block';
+        }
+
+        function fecha() {
+            document.getElementById('conf').style.display = 'none';
+        }
+    </script>
 </h:head>
 <h:body>
     <div id="popup" class="popup">
@@ -64,9 +93,10 @@
             <button class="fechaAjuda" onclick="fechar()">x</button>
             <b></b>
             <p>
-                Para cadastrar um usuário em nosso sistema, siga os passos abaixo:<br/>
-                1º) Fornecer os dados necessário,<b> é obrigatório o preenchimento de todos os dados. </b><br/>
-                2º) Após preencher corretamente todos os dados, clique em <b>Enviar dados</b>.<br/>
+                Para finalizar um empréstimo, siga os passos abaixo:<br/>
+                1º) Selecione o Empréstimo desejado.<br/>
+                2º) Selecione o novo usuário/livro desejado.<br/>
+                3º) Clique em <b>Finalizar</b>.<br/>
             </p>
         </p>
     </div>
@@ -76,5 +106,85 @@
         <p:menuitem value="MENU INICIAL" url="acessoBalconista.xhtml"></p:menuitem>
         <p:menuitem value="AJUDA?" url="javascript: abrir();"></p:menuitem>
     </p:menubar>
+    <div class="jumbotron">
+        <section alig="center" class="right">
+            <h:form id="telaFinalEmp">
+                <div class="menu">
+                    <h5 align="center">Controle de Empréstimos</h5><br/>
+                    <div class="form-group">
+                        <h:commandButton value="Cadastrar Empréstimo" class="btn btn-block btn-primary"
+                                         action="cadastrarEmprestimo?faces-redirect=true"/>
+                    </div>
+                    <div class="form-group">
+                        <h:commandButton value="Consultar Empréstimo" class="btn btn-block btn-primary"
+                                         action="consultarEmprestimo?faces-redirect=true"/>
+                    </div>
+                    <div class="form-group">
+
+                        <h:commandButton value="Finalizar Empréstimo" class="btn btn-block btn-primary"
+                                         action="deletarEmprestimo?faces-redirect=true"/>
+                    </div>
+                </div>
+            </h:form>
+
+            <h:form>
+                <p:outputLabel value="Empréstimos"/><font color="red">*</font>
+                <h:form id="Empréstimo">
+                    <p:selectOneMenu filter="true" value="#{c_Emprestimo.emp.codemprestimo}" filterMatchMode="contains"
+                                     required="true" style="width:1279px" panelStyle="width:1279px">
+
+                        <f:selectItem noSelectionOption="true" itemLabel="Selecione o empréstimo que deseja alterar"/>
+                        <f:selectItems value="#{c_Emprestimo.consultaEmprestimosEmVigor()}" var="emp"
+                                       itemLabel="Nome: #{emp.nome_user} | E-mail: #{emp.email_user} | Título: #{emp.titulo_book} | Autor: #{emp.autor_book} | Editora: #{emp.editora_book} | Ano lanç.: #{emp.anolancamento_book}"
+                                       itemValue="#{emp.codemprestimo}"/>
+                    </p:selectOneMenu>
+
+
+                    <p:outputLabel value="Usuários"/>
+
+                    <p:selectOneMenu filter="true" value="#{c_Emprestimo.emp.codusuario}" filterMatchMode="contains"
+                                     required="false" style="width:1279px" panelStyle="width:1279px">
+
+                        <f:selectItem noSelectionOption="true" itemLabel="Selecione um novo usuário"/>
+                        <f:selectItems value="#{c_Emprestimo.consultaUsuariosEmprestimo()}" var="user"
+                                       itemLabel="Nome: #{user.nome} | CPF: #{user.cpf} | E-Mail: #{user.email}"
+                                       itemValue="#{user.codusuario}"/>
+                    </p:selectOneMenu>
+
+                    <p:outputLabel value="Livros"/>
+                    <p:selectOneMenu filter="true" value="#{c_Emprestimo.emp.codlivro}" filterMatchMode="contains"
+                                     required="false" style="width:1279px" panelStyle="width:1279px">
+                        <f:selectItem noSelectionOption="true" itemLabel="Selecione um novo livro"/>
+                        <f:selectItems value="#{c_Emprestimo.consultaLivrosEmprestimo()}" var="book"
+                                       itemLabel="Título: #{book.titulo} | Autor: #{book.autor} | Editora: #{book.editora} | Ano Lanç.: #{book.anolancamento} | Cód. Catal: #{book.codcatalogacao}"
+                                       itemValue="#{book.codlivro}"/>
+
+                    </p:selectOneMenu>
+
+                    <p:outputLabel value="Data Devolução"/>
+                    <p:inputMask class="form-control" value="#{c_Emprestimo.emp.datadev}" mask="99/99/9999" required="true" placeholder="DD/MM/AAAA" maxlength="10"/>
+                    <br/>
+
+                    <div id="conf" class="conf">
+                        <p align="center">
+                            <h:outputLabel value="Deseja salvar as alterações?"/>
+                        </p>
+                        <h:form>
+                            <div class="form-group">
+                                <h:commandButton value="Sim" class="btn btn-block btn-primary"
+                                                 action="#{c_Emprestimo.realizaEdicaoEmprestimo}"/>
+                            </div>
+                            <div class="form-group">
+                                <h:commandButton value="Não" class="btn btn-block btn-primary"
+                                                 onclick="fecha()"></h:commandButton>
+                            </div>
+                        </h:form>
+                    </div>
+                    <h:commandButton value="Alterar" class="btn btn-block btn-primary"
+                                     onclick="abri()"/>
+                </h:form>
+            </h:form>
+        </section>
+    </div>
 </h:body>
 </html>
