--- a/web/consultarEmprestimo.xhtml
+++ b/web/consultarEmprestimo.xhtml
@@ -3,8 +3,8 @@
         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:p="http://primefaces.org/ui"
->
+      xmlns:f="http://xmlns.jcp.org/jsf/core"
+      xmlns:p="http://primefaces.org/ui">
 <h:head>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
@@ -24,7 +24,7 @@
                 right: 0px;
                 margin: auto;
                 width: 650px;
-                height: 150px;
+                height: 160px;
                 padding: 15px;
                 border: solid 1pX black;
                 background: white;
@@ -45,6 +45,10 @@
                 background: gray;
                 color: blue;
             }
+
+            .jumbotron{
+                background: lightgray;
+            }
         </style>
     </meta>
 
@@ -64,9 +68,12 @@
             <button class="fechaAjuda" onclick="fechar()">x</button>
             <b></b>
             <p>
-                Para cadastrar um usuário em nosso sistema, siga os passos abaixo:<br/>
-                1º) Fornecer os dados necessário,<b> é obrigatório o preenchimento de todos os dados. </b><br/>
-                2º) Após preencher corretamente todos os dados, clique em <b>Enviar dados</b>.<br/>
+                Para Consultar os empréstimos do sistema, siga os passos abaixo:<br/>
+                1º) Forneça o nome do usuário ou título do livro.<br/>
+                2º) Clique em <b>Consultar</b>.<br/>
+                <font color="red">
+                    Obs: Caso não filtre por nome/título, todos os empréstimos serão listados.
+                </font>
             </p>
         </p>
     </div>
@@ -76,5 +83,105 @@
         <p:menuitem value="MENU INICIAL" url="acessoBalconista.xhtml"></p:menuitem>
         <p:menuitem value="AJUDA?" url="javascript: abrir();"></p:menuitem>
     </p:menubar>
+
+    <div class="jumbotron">
+        <section alig="center" class="right">
+            <h:form id="telaConsultaEmp">
+                <div class="menu">
+                    <h5 align="center">Controle de Empréstimos</h5><br/>
+                    <div class="form-group">
+                        <h:commandButton value="Cadastrar Empréstimo" class="btn btn-block btn-primary"
+                                         action="cadastrarEmprestimo?faces-redirect=true"/>
+                    </div>
+                    <div class="form-group">
+                        <h:commandButton value="Alterar Empréstimo" class="btn btn-block btn-primary"
+                                         action="alterarEmprestimo?faces-redirect=true"/>
+                    </div>
+                    <div class="form-group">
+                        <h:commandButton value="Finalizar Empréstimo" class="btn btn-block btn-primary"
+                                         action="deletarEmprestimo?faces-redirect=true"/>
+                    </div>
+                </div>
+                <h:form id="telaConsultaUsuarios">
+                    <div class="form-group"><br/>
+                        <h:outputLabel value="Nome do Usuário ou Título do Livro"/>
+                        <p:inputText value="#{c_Emprestimo.emp.nome_user}" class="form-control" required="false"
+                                     maxlength="60"
+                                     placeholder="Insira o nome do usuário ou o título do livro"></p:inputText>
+                    </div>
+                    <h:form>
+                        <div class="form-group">
+                            <h:commandButton value="Buscar" class="btn btn-block btn-primary"
+                                             action="#{c_Emprestimo.consultaEmprestimos}"></h:commandButton>
+                        </div>
+
+
+                        <p:dataTable value="#{c_Emprestimo.consultaEmprestimos()}" var="emp" border="9"
+                                     rendered="true"
+                                     title="Relação de Empréstimos.">
+
+                            <f:facet name="header">
+                                Relação de Empréstimo(s)
+                            </f:facet>
+                            <div align="center" class="form-group">
+                                <p:column>
+                                    <f:facet name="header">Id Emp</f:facet>
+                                    #{emp.codemprestimo}
+                                </p:column>
+                                <!--<p:column>
+                                    <f:facet name="header">Id User</f:facet>
+                                    #{emp.codusuario}
+                                </p:column>-->
+                                <p:column>
+                                    <f:facet name="header">Nome</f:facet>
+                                    #{emp.nome_user}
+                                </p:column>
+                                <p:column>
+                                    <f:facet name="header">E-mail</f:facet>
+                                    #{emp.email_user}
+                                </p:column>
+                                <!--<p:column>
+                                    <f:facet name="header">Id Livro</f:facet>
+                                    #{emp.codlivro}
+                                </p:column>-->
+                                <p:column>
+                                    <f:facet name="header">Título</f:facet>
+                                    #{emp.titulo_book}
+                                </p:column>
+                                <p:column>
+                                    <f:facet name="header">Autor</f:facet>
+                                    #{emp.autor_book}
+                                </p:column>
+                                <p:column>
+                                    <f:facet name="header">Editora</f:facet>
+                                    #{emp.editora_book}
+                                </p:column>
+                                <p:column>
+                                    <f:facet name="header">Ano Lanç.</f:facet>
+                                    #{emp.anolancamento_book}
+                                </p:column>
+                                <p:column>
+                                    <f:facet name="header">Dt. Emp.</f:facet>
+                                    #{emp.dataemp}
+                                </p:column>
+                                <p:column>
+                                    <f:facet name="header">Dt. Dev.</f:facet>
+                                    #{emp.datadev}
+                                </p:column>
+                                <p:column>
+                                    <f:facet name="header">Dt. Alt.</f:facet>
+                                    #{emp.dataalt}
+                                </p:column>
+                                <p:column>
+                                    <f:facet name="header">Status</f:facet>
+                                    #{emp.status_emp}
+                                </p:column>
+                            </div>
+                        </p:dataTable>
+                    </h:form>
+                </h:form>
+            </h:form>
+        </section>
+    </div>
 </h:body>
 </html>
