--- a/web/acessoAluno.xhtml
+++ b/web/acessoAluno.xhtml
@@ -65,23 +65,22 @@
                 <div class="form-group">
                     <h5 align="center">Menu do Aluno</h5>
                 </div>
+                <div class="menu">
+                    <div class="form-group">
+                        <h:commandButton value="Consultar Livros" class="btn btn-block btn-primary"
+                                         action="consultarAcervoAluno?faces-redirect=true"/>
+                    </div>
+                    <div class="form-group">
+                        <h:commandButton value="Meus Empréstimos" class="btn btn-block btn-primary"
+                                         action="acessoAluno?faces-redirect=true"/>
+                    </div>
+                    <div class="form-group">
+
+                        <h:commandButton value="Dados Cadastrais" class="btn btn-block btn-primary"
+                                         action="acessoAluno?faces-redirect=true"/>
+                    </div>
+                </div>
                 <div class="form-group">
-                    <!--<div class="form-group">
-                        <h:commandButton value="Cadastrar" class="btn btn-block btn-primary"
-                                         action="#{bibliotecarioBean.cadastrarObra}"></h:commandButton>
-                    </div>
-                    <div class="form-group">
-                        <h:commandButton value="Consultar" class="btn btn-block btn-primary"
-                                         action="#{bibliotecarioBean.cadastrarObra}"></h:commandButton>
-                    </div>
-                    <div class="form-group">
-                        <h:commandButton value="Alterar" class="btn btn-block btn-primary"
-                                         action="#{bibliotecarioBean.cadastrarObra}"></h:commandButton>
-                    </div>
-                    <div class="form-group">
-                        <h:commandButton value="Deletar" class="btn btn-block btn-primary"
-                                         action="#{bibliotecarioBean.cadastrarObra}"></h:commandButton>
-                    </div>-->
                     <div class="form-group">
                         <p> Perfil: Aluno</p>
                     </div>
