--- a/web/acessoBalconista.xhtml
+++ b/web/acessoBalconista.xhtml
@@ -20,7 +20,7 @@
                 top: 140px;
                 bottom: 0;
                 left: 0;
-                right: 0;
+                right: -500px;
                 margin: auto;
                 width: 600px;
                 height: 420px;
@@ -34,10 +34,10 @@
                 position: fixed;
                 top: -350px;
                 bottom: 0;
-                left: 280px;
+                left: 0px;
                 right: 0px;
                 margin: auto;
-                width: 1040px;
+                width: 1340px;
                 height: 45px;
                 padding: 15px;
                 border: solid 1pX black;
@@ -57,6 +57,34 @@
                 border-radius: 3px;
                 background: gray;
                 color: blue;
+            }
+
+            .usuarios {
+                position: fixed;
+                top: -100px;
+                bottom: 0;
+                left: 0;
+                right: 1070px;
+                margin: auto;
+                width: 250px;
+                height: 200px;
+                background: white;
+            }
+
+            .emprestimo {
+                position: fixed;
+                top: -100px;
+                bottom: 0;
+                left: 0;
+                right: 460px;
+                margin: auto;
+                width: 350px;
+                height: 200px;
+                background: white;
+            }
+
+            .emp{
+                height: 216px;
             }
         </style>
     </meta>
@@ -85,80 +113,84 @@
                 <b>Consultar Empréstimo:</b> Reliza a busca pelos dados de um determinado empréstimo.<br/>
                 <b>Alterar Empréstimo:</b> Reliza a alteração/atualização dos dados de um empréstimo.<br/>
                 <b>Deletar Empréstimo:</b> Reliza a inativação de um determinado empréstimo, setando livro como disponível em seguida.<br/>
-
-
-
-
             </p><b></b>
         </p>
     </div>
 
+    <!--RETORNOS-->
     <div align="left" class="retornos" id="retornos">
         <b>
-            <font color="#{userBean.user.color_msg}">
-                #{userBean.user.msg_autenticacao}
+            <font color="#{c_Usuario.user.color_msg}">
+                #{c_Usuario.user.msg_autenticacao}
+            </font>
+            <font color="#{c_Emprestimo.emp.color_msg_retorno}">
+                #{c_Emprestimo.emp.msg_retorno}
             </font>
         </b>
     </div>
-
     <i><h1 align="center"> BiblioTec </h1></i>
     <p:menubar style="align-items: center">
         <p:menuitem value="SAIR" url="gestaoBibliotecas.xhtml"></p:menuitem>
         <p:menuitem value="ACERVO" url="consultarAcervoBalconista.xhtml"></p:menuitem>
         <p:menuitem value="AJUDA?" url="javascript: abrir();"></p:menuitem>
     </p:menubar>
-    <section alig="center" class="row">
-        <div class="jumbotron">
-            <h:form id="telaBalconista">
-                <div class="form-group">
-                    <h5 align="center">Controle de Usuarios</h5>
-                </div>
-                <div class="form-group">
+    <div class="usuarios" id="usuarios">
+        <section alig="center" class="row">
+            <div class="jumbotron">
+                <h:form id="telaBalconista">
                     <div class="form-group">
-                        <h:commandButton value="Cadastrar" class="btn btn-block btn-primary"
-                                         action="cadastrarUsuarioBalconista"></h:commandButton>
-
-                        <h:commandButton value="Consultar" class="btn btn-block btn-primary"
-                                         action="consultaUsuario"></h:commandButton>
-
-                        <h:commandButton value="Alterar" class="btn btn-block btn-primary"
-                                         action="editarUsuario"></h:commandButton>
-
-                        <h:commandButton value="Deletar" class="btn btn-block btn-primary"
-                                         action="deletarUsuario"></h:commandButton>
-
-
+                        <h5 align="center">Controle de Usuarios</h5>
                     </div>
-                </div>
-
-
-                <div class="form-group">
-                    <h5 align="center">Controle de Empréstimos</h5>
-                </div>
-                <div class="form-group">
                     <div class="form-group">
-                        <h:commandButton value="Cadastrar" class="btn btn-block btn-primary"
-                                         action="acessoBalconista"></h:commandButton>
+                        <div class="form-group">
+                            <h:commandButton value="Cadastrar" class="btn btn-block btn-primary"
+                                             action="cadastrarUsuarioBalconista?faces-redirect=true"></h:commandButton>
 
-                        <h:commandButton value="Consultar" class="btn btn-block btn-primary"
-                                         action="acessoBalconista"></h:commandButton>
+                            <h:commandButton value="Consultar" class="btn btn-block btn-primary"
+                                             action="consultaUsuario?faces-redirect=true"></h:commandButton>
 
-                        <h:commandButton value="Alterar" class="btn btn-block btn-primary"
-                                         action="acessoBalconista"></h:commandButton>
+                            <h:commandButton value="Alterar" class="btn btn-block btn-primary"
+                                             action="editarUsuario?faces-redirect=true"></h:commandButton>
 
-                        <h:commandButton value="Deletar" class="btn btn-block btn-primary"
-                                         action="acessoBalconista"></h:commandButton>
-
-
+                            <h:commandButton value="Deletar" class="btn btn-block btn-primary"
+                                             action="deletarUsuario?faces-redirect=true"></h:commandButton>
+                        </div>
                     </div>
-                </div>
+                    <div class="form-group">
+                        <p>Perfil: Balconista</p>
+                    </div>
+                </h:form>
+            </div>
+        </section>
+    </div>
+    <div class="emprestimo" id="emprestimo">
+        <section class="row">
+            <div class="jumbotron">
+                <h:form id="telaBalconista1">
+                    <div class="form-group">
+                        <h5 align="center">Controle de Empréstimos</h5>
+                    </div>
+                    <div class="emp">
+                        <div class="form-group">
+                            <h:commandButton value="Cadastrar" class="btn btn-block btn-primary"
+                                             action="cadastrarEmprestimo?faces-redirect=true"></h:commandButton>
 
-                <div class="form-group">
-                    <p> Perfil: Balconista</p>
-                </div>
+                            <h:commandButton value="Consultar" class="btn btn-block btn-primary"
+                                             action="consultarEmprestimo?faces-redirect=true"></h:commandButton>
 
-            </h:form>
-        </div>
-    </section>
+                            <h:commandButton value="Alterar" class="btn btn-block btn-primary"
+                                             action="alterarEmprestimo?faces-redirect=true"></h:commandButton>
+
+                            <h:commandButton value="Finalizar" class="btn btn-block btn-primary"
+                                             action="deletarEmprestimo?faces-redirect=true"></h:commandButton>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <p></p>
+                    </div>
+                </h:form>
+            </div>
+        </section>
+    </div>
 </h:body>
 </html>
