--- a/web/consultarAcervoAluno.xhtml
+++ b/web/consultarAcervoAluno.xhtml
@@ -83,7 +83,8 @@
     </div>
     <i><h1 align="center"> BiblioTec </h1></i>
     <p:menubar style="align-items: center">
-        <p:menuitem value="INÍCIO" url="gestaoBibliotecas.xhtml"></p:menuitem>
+        <p:menuitem value="SAIR" url="gestaoBibliotecas.xhtml"></p:menuitem>
+        <p:menuitem value="MENU INICIAL" url="acessoAluno.xhtml"></p:menuitem>
         <p:menuitem value="AJUDA?" url="javascript: abrir();"></p:menuitem>
     </p:menubar>
     <section alig="center" class="">
@@ -96,8 +97,7 @@
                 </div>
                 <div class="form-group">
                     <h:commandButton value="Consultar" class="btn btn-block btn-primary"
-                                     action="#{c_Livro.realizarConsultaLivro}"
-                                     url="javascript: tiraTabela();"/>
+                                     action="#{c_Livro.realizarConsultaLivro}"/>
                 </div>
             </h:form>
             <section alig="center" class="row">
