--- a/web/editarUsuario.xhtml
+++ b/web/editarUsuario.xhtml
@@ -60,6 +60,10 @@
                 background: gray;
                 color: blue;
             }
+
+            .jumbotron{
+                background: lightgray;
+            }
         </style>
     </meta>
 
@@ -99,7 +103,7 @@
                 Para alterar os dados do usuário, siga os seguintes passos:<br/>
                 1) Use o botão <b>Buscar</b> para filtrar os dados do usuário que deseja alterar.<br/>
                 2) <b>Preencha</b> apenas o que deseja alterar.<br/>
-                3) <b>Informe o ID</b> do usuário e clique em <b> Alterar </b> para salvar as novas informações.
+                3) <b>Informe o Id e o Status</b> do usuário e clique em <b> Alterar </b> para salvar as novas informações.
             </p>
         </p>
     </div>
@@ -116,29 +120,28 @@
                 </div>
                 <div class="form-group">
                     <h:commandButton value="Cadastrar Usuário" class="btn btn-block btn-primary"
-                                     action="cadastrarUsuarioBalconista.xhtml"/>
+                                     action="cadastrarUsuarioBalconista?faces-redirect=true"/>
                 </div>
                 <div class="form-group">
                     <h:commandButton value="Deletar Usuário" class="btn btn-block btn-primary"
-                                     action="deletarUsuario.xhtml"/>
+                                     action="deletarUsuario?faces-redirect=true"/>
                 </div>
             </h:form>
             <h:form id="buscarUsuário">
                 <div class="form-group">
-                    <h:outputLabel value="Nome do Usuário"/>
-                    <p:inputText value="#{userBean.user.nome}" class="form-control" required="false"
-                                 placeholder="Insira o nome do usuário"></p:inputText>
+                    <h:outputLabel value="Nome do Usuário, Username, E-Mail ou CPF"/>
+                    <p:inputText value="#{c_Usuario.user.nome}" class="form-control" required="false"
+                                 placeholder="Insira o nome do usuário, username, e-mail ou cpf" maxlength="100"></p:inputText>
                 </div>
                 <div class="form-group">
                     <h:commandButton value="Buscar" class="btn btn-block btn-primary"
-                                     action="#{userBean.realizaConsultaUsuario}"></h:commandButton>
+                                     action="#{c_Usuario.realizaConsultaUsuario}"></h:commandButton>
                 </div>
             </h:form>
 
                 <div class="form-group">
-                    <p:dataTable value="#{userBean.realizaConsultaUsuario()}" var="usuario" border="9"
-                                 rendered="true"
-                                 title="Relação de Usuários.">
+                    <p:dataTable value="#{c_Usuario.realizaConsultaUsuario()}" var="usuario" border="9"
+                                 rendered="true" title="Relação de Usuários.">
 
                         <f:facet name="header">
                             Relação de Usuários
@@ -207,63 +210,65 @@
                     <p align="center">
                         <font color="red">**Inserir as informações apenas nos campos que deseja alterar**</font>
                     </p>
+                    #{c_Usuario.user.nome = ""}
+                    #{c_Usuario.user.usuario = ""}
+                    #{c_Usuario.user.cpf = ""}
+                    #{c_Usuario.user.email = ""}
                     <h:form id="alterarUsuario">
-                        #{userBean.user.nome = ""}
                         <div class="form-group">
                             <h:outputLabel value="Nome"/>
-                            <p:inputText value="#{userBean.user.nome}" class="form-control"
-                                         required="false" placeholder="Insira o nome do usuário"></p:inputText>
+                            <p:inputText value="#{c_Usuario.user.nome}" class="form-control"
+                                         maxlength="60" required="false" placeholder="Insira o nome do usuário"></p:inputText>
                         </div>
                         <div class="form-group">
                             <h:outputLabel value="Usuário"/>
-                            <p:inputText value="#{userBean.user.usuario}" class="form-control"
-                                         required="false" placeholder="Insira o username"></p:inputText>
+                            <p:inputText value="#{c_Usuario.user.usuario}" class="form-control"
+                                         maxlength="30" required="false" placeholder="Insira o username"></p:inputText>
                         </div>
                         <div class="form-group">
                             <h:outputLabel value="E-Mail"/>
-                            <p:inputText value="#{userBean.user.email}" class="form-control"
-                                         required="false" placeholder="Insira o novo e-mail"></p:inputText>
+                            <p:inputText value="#{c_Usuario.user.email}" class="form-control"
+                                         maxlength="100" required="false" placeholder="Insira o novo e-mail"></p:inputText>
                         </div>
                         <div class="form-group">
                             <h:outputLabel value="RG"/>
-                            <p:inputText value="#{userBean.user.rg}" class="form-control"
-                                         required="false" placeholder="Insira o RG(somente números)"></p:inputText>
+                            <p:inputText value="#{c_Usuario.user.rg}" class="form-control"
+                                         maxlength="10" required="false" placeholder="Insira o RG(somente números)"></p:inputText>
                         </div>
                         <div class="form-group">
                             <h:outputLabel value="CPF"/>
-                            <p:inputText value="#{userBean.user.cpf}" class="form-control"
-                                         required="false" placeholder="Insira o CPF(somente números)"></p:inputText>
+                            <p:inputText value="#{c_Usuario.user.cpf}" class="form-control"
+                                         maxlength="15" required="false" placeholder="Insira o CPF(somente números)"></p:inputText>
                         </div>
                         <div class="form-group">
                             <h:outputLabel value="Endereço"/>
-                            <p:inputText value="#{userBean.user.endereco}" class="form-control"
-                                         required="false" placeholder="Insira o novo endereço do usuário"></p:inputText>
+                            <p:inputText value="#{c_Usuario.user.endereco}" class="form-control"
+                                         maxlength="100" required="false" placeholder="Insira o novo endereço do usuário"></p:inputText>
                         </div>
                         <div class="form-group">
                             <h:outputLabel value="CEP"/>
-                            <p:inputText value="#{userBean.user.cep}" class="form-control"
-                                         required="false" placeholder="Insira o novo CEP(somente números)"></p:inputText>
+                            <p:inputText value="#{c_Usuario.user.cep}" class="form-control"
+                                         maxlength="9" required="false" placeholder="Insira o novo CEP(somente números)"></p:inputText>
                         </div>
                         <div class="form-group">
                             <h:outputLabel value="Cidade"/>
-                            <p:inputText value="#{userBean.user.cidade}" class="form-control"
-                                         required="false" placeholder="Insira a nova cidade do usuário"></p:inputText>
+                            <p:inputText value="#{c_Usuario.user.cidade}" class="form-control"
+                                         maxlength="60" required="false" placeholder="Insira a nova cidade do usuário"></p:inputText>
                         </div>
                         <div class="form-group">
                             <h:outputLabel value="Estado"/>
-                            <p:inputText value="#{userBean.user.estado}" class="form-control"
-                                         required="false" placeholder="Insira o novo estado do usuário"></p:inputText>
+                            <p:inputText value="#{c_Usuario.user.estado}" class="form-control"
+                                         maxlength="20" required="false" placeholder="Insira o novo estado do usuário"></p:inputText>
                         </div>
                         <div class="form-group">
                             <h:outputLabel value="Data Nascimento"/>
-                            <p:inputText value="#{userBean.user.datanasc}" class="form-control"
-                                         required="false" placeholder="AAAA-MM-DD"></p:inputText>
+                            <p:inputMask class="form-control" value="#{c_Usuario.user.datanasc}" mask="99/99/9999" placeholder="DD/MM/AAAA" maxlength="10"/>
                         </div>
 
                         <h:outputText value="Perfil de Usuário"/>
                         <div align="left" class="form-group">
                             <h:panelGrid columns="2" style="margin-bottom:10px" cellpadding="5">
-                                <p:selectOneButton value="#{userBean.user.permissao}">
+                                <p:selectOneButton value="#{c_Usuario.user.permissao}">
                                     <f:selectItem itemLabel="Bibliotecário" itemValue='1'/>
                                     <f:selectItem itemLabel="Balconista" itemValue='2'/>
                                     <f:selectItem itemLabel="Aluno" itemValue='3'/>
@@ -274,7 +279,7 @@
                         <h:outputText value="Status do Usuário"/><font color="red">*</font>
                         <div align="left" class="form-group">
                             <h:panelGrid columns="2" style="margin-bottom:10px" cellpadding="5">
-                                <p:selectOneButton value="#{userBean.user.ativo}" required="true">
+                                <p:selectOneButton value="#{c_Usuario.user.ativo}" required="true">
                                     <f:selectItem itemLabel="Ativar" itemValue='1'/>
                                     <f:selectItem itemLabel="Inativar" itemValue='0'/>
                                 </p:selectOneButton>
@@ -283,7 +288,7 @@
 
                         <div class="form-group">
                             <h:outputLabel value="Id do Usuário"/><font color="red">*</font>
-                            <p:inputText value="#{userBean.user.codusuario}" class="form-control"
+                            <p:inputText value="#{c_Usuario.user.codusuario}" class="form-control"
                                          required="true" placeholder="Insira o Id do usuário"></p:inputText>
                         </div>
                         <div class="form-group">
@@ -296,7 +301,7 @@
                                 <h:form>
                                     <div class="form-group">
                                         <h:commandButton value="Sim" class="btn btn-block btn-primary"
-                                                         action="#{userBean.realizaEdicaoUsuario}"/>
+                                                         action="#{c_Usuario.realizaEdicaoUsuario}"/>
                                     </div>
                                     <div class="form-group">
                                         <h:commandButton value="Não" class="btn btn-block btn-primary"
@@ -311,7 +316,6 @@
                         </div>
                     </h:form>
                 </div>
-
         </div>
     </section>
 </h:body>
