-CRUD de usuários    = OK -CRUD de livros      = OK -CRUD de empréstimos = OK -Funcionalidades do Bibliotecário = 100% -Funcionalidades do Balconista    = 100% -Melhoras nos botões de Ativar/Inativar livros; -Melhoras no posicionamento do section; -Adicionado as colunas datacad, dataalt, na tabela de livros; -Adicionado as colunas datacad, dataalt e datanasc na tabela de usuários; -Feito as alterações nas operações CRUD dos usuários/livros e modo a deixar salvos as datas corretamente... -Adicionado tela de consulta de acervo próprio pro balconista. -Refeito a tela de início, melhorei posicionamento da imagem de início, NOVAMENTE. -Melhorias nos Beans; -Realizado ?faces-redirect=true para atualização da url sempre; -Realizado conferência nas mensagens de retornos. -Realizado alterações no front-end quanto a validação dos maxlenght dos campos; -Realizado alteração nos inputs de datas e outputs também; -Melhoria nos posicionamentos dos painéis de controle do balconista e bibliotecário; -Realizado melhoria no CRUD de livros; -Adicionado uma base de dados para testes; -Iniciando CRUD de empréstimos. -Adicionado SelectOneMenu nas novas funcionalidades do Empréstimo(mais clean); -Banco de dados atualizado; -Adicionado consultaAcervoAluno.xhtml .

--- a/web/consultarAcervoAluno.xhtml
+++ b/web/consultarAcervoAluno.xhtml
@@ -30,7 +30,6 @@
                 background: white;
                 display: none;
             }
-
             .fechar {
                 position: absolute;
                 top: -93px;
@@ -52,11 +51,9 @@
         function abrir() {
             document.getElementById('popup').style.display = 'block';
         }
-
         function fechar() {
             document.getElementById('popup').style.display = 'none';
         }
-
         function tiraTabela(){
             document.getElementById('dataTable').style.display = 'none'
         }
@@ -76,7 +73,7 @@
             <button class="fechar" onclick="fechar()">x</button>
             <b></b>
             <p>
-                Para consultar nossos livros, basta preencher o título e clicar em Consultar, caso contrário nosso sistema listará todos os livros do acervo.
+                Para consultar nossos livros, basta preencher o título, nome do autor ou editora e clicar em <b>Consultar</b>, caso contrário nosso sistema listará todos os livros do acervo.
             </p>
         </p>
     </div>
