--- a/web/consultarAcervoBalconista.xhtml
+++ b/web/consultarAcervoBalconista.xhtml
@@ -71,13 +71,12 @@
             box-shadow: none !important;
         }
     </style>
-
     <div id="popup" class="popup">
         <p>Olá,
             <button class="fechar" onclick="fechar()">x</button>
             <b></b>
             <p>
-                Para consultar nossos livros, basta preencher o título e clicar em Consultar, caso contrário nosso sistema listará todos os livros do acervo.
+                Para consultar nossos livros, basta preencher o título, nome do autor ou editora e clicar em <b>Consultar</b>, caso contrário nosso sistema listará todos os livros do acervo.
             </p>
         </p>
     </div>
