--- a/web/gestaoBibliotecas.xhtml
+++ b/web/gestaoBibliotecas.xhtml
@@ -198,7 +198,7 @@
         </div>
 
         <div id="imagem" class="imagem">
-            <a href="http://www.bce.uem.br/" title="Novas aquisições da BCE." target="_blank">
+            <a href="http://www.bce.uem.br/" title="Novas aquisições da Biblioteca Central - UEM." target="_blank">
                 <img align="right" src="manchete.jpg" width="1070" height="475" alt="Banner UEM."/></a>
         </div>
     </section>
