--- a/web/consultarLivro.xhtml
+++ b/web/consultarLivro.xhtml
@@ -65,8 +65,7 @@
             <button class="fechaAjuda" onclick="fechar()">x</button>
             <b></b>
             <p>
-                Para visualizar nosso acervo, preencha o título e clique em
-                <b>Consultar</b>.<br/>Caso contrário, todos os livros serão listados.
+                Para consultar nossos livros, basta preencher o título, nome do autor ou editora e clicar em <b>Consultar</b>, caso contrário nosso sistema listará todos os livros do acervo.
             </p>
         </p>
     </div>
